# apexdevkit

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code.yml  package-app.yml  package.yml  python-app.yml
apexdevkit/: date.py  environment.py  error.py  fake.py  fluent.py  formatter.py  id.py  key_fn.py  security.py  server.py  synchronization.py  value.py
apexdevkit/annotation/: __init__.py  deprecate.py
apexdevkit/fastapi/: __init__.py  builder.py  dependable.py  name.py  request.py  resource.py  response.py  rest.py  router.py  schema.py  service.py
apexdevkit/http/: __init__.py  fake.py  fluent.py  httpx.py  json.py  url.py
apexdevkit/http/httpx/: __init__.py  client.py  hooks.py  httpx.py
apexdevkit/query/: __init__.py  generator.py  query.py
apexdevkit/repository/: __init__.py  base.py  connector.py  database.py  decorator.py  in_memory.py  interface.py  mongo.py  mssql.py  multi.py  repository.py  sql.py  sqlite.py
apexdevkit/repository/alternative/: __init__.py  base.py  dataclass_repository.py  formatter_repository.py  interface.py
apexdevkit/repository/core/: __init__.py  database.py  decorator.py  interface.py  mixin.py  multi.py
apexdevkit/repository/in_memory/: __init__.py  builder.py  mixin.py  multi_key.py  repository.py  single_key.py  store.py
apexdevkit/repository/sql/: __init__.py  connector.py  field.py  mssql.py  sqlite.py
apexdevkit/runner/: __main__.py
apexdevkit/security/: __init__.py  core.py  hashing.py
apexdevkit/testing/: __init__.py  database.py  fake.py  rest.py
pycodex/: cli.py  reporters.py  service.py
pycodex/tasks/: __init__.py  result.py  shell.py  update.py
pydevtools/: error.py
pydevtools/annotation/: __init__.py  deprecate.py
pydevtools/fastapi/: __init__.py  builder.py  dependables.py  docs.py
pydevtools/http/: __init__.py  fake.py  fluent.py  httpx.py  json.py  url.py
pydevtools/repository/: __init__.py  connector.py  database.py  in_memory.py
pydevtools/testing/: __init__.py  database.py  rest.py
test_mongo_db/: test_mongo_db.py
tests/: fake.py  sample_api.py  test_.py  test_as_plural.py  test_connector.py  test_database.py  test_date.py  test_dependable.py  test_deprecation.py  test_environement.py  test_errors.py  test_for_forbidden_error.py  test_http.py  test_id.py  test_in_memory_repository.py  test_json_object.py  test_mongo_db.py  test_nothing.py  test_quantity.py  test_rest_repository.py  test_rest_resource.py  test_rest_user.py  test_security.py  test_sqlite_repository.py  test_sync.py  test_value.py
tests/approvals/: conftest.py  test_order.py  test_query_builder.py  test_restful_schema.py  test_select.py
tests/approvals/approved/: test_mssql_table.test_should_delete_all.approved.sql  test_mssql_table.test_should_insert.approved.sql  test_mssql_table.test_should_select_all.approved.sql  test_mssql_table.test_should_update.approved.sql  test_query_builder.test_filter.approved.sql  test_table_with_parent.test_should_delete.approved.sql  test_table_with_parent.test_should_insert.approved.sql  test_table_with_parent.test_should_select.approved.sql  test_table_with_parent.test_should_select_all.approved.sql  test_table_with_parent.test_should_update.approved.sql
tests/fastapi/: sample_api.py  test_builder.py  test_dependable.py
tests/fluent/: test_fluent_dict.py
tests/formatter/: test_alias_formatter.py  test_alias_mapping.py  test_dataclass_formatter.py  test_list_formatter.py
tests/http/: test_fluent_http.py  test_fluent_http_response.py  test_fluent_httpx.py  test_httpx.py  test_httpx_hook_on_request.py  test_httpx_hook_on_response.py  test_httpx_response.py  test_json_dict.py  test_sign_payload_with.py  test_url.py
tests/query/: test_condition.py  test_evaluator.py  test_filter.py  test_footer.py  test_ordering.py  test_paging.py  test_selection.py  test_user.py
tests/repository/: data.py  test_brute_force_batch.py  test_byte_store_cache.py  test_connector.py  test_database.py  test_in_memory.py  test_mongo.py  test_mongo_db.py  test_mssql.py  test_mssql_multiple_table.py  test_mssql_table.py  test_multiple_repository.py  test_repository_combo.py  test_repository_in_memory.py  test_repository_in_mssql.py  test_repository_in_sqlite.py  test_sqlite.py  test_sqlite_table.py
tests/resource/: conftest.py  sample_api.py  setup.py  test_does_not_exist.py  test_exist.py  test_forbidden.py  test_read_many.py  test_resource.py  test_rest_resource.py  test_rest_user.py  test_success.py  test_user_dependency.py
(+123 files in other folders)
