[project]
name = "apexdevkit"
version = "1.23.1"
description = "Apex Development Tools for python."
readme = "README.md"
authors = [
    { name = "Apex Dev", email = "dev@apex.ge" }
]
dynamic = ["dependencies"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
httpx = "*"
fastapi = "*"
uvicorn = "*"
sentry-sdk = { extras = ["fastapi"], version = "*" }
python-dotenv = "*"
pymssql = "2.3.2"

[tool.poetry.group.dev.dependencies]
approvaltests = "*"
pytest = "*"
pytest-approvaltests = "*"
pytest-cov = "*"
pytest-recording = "*"
coverage = "*"
faker = "*"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = [
    "apexdevkit/fastapi/schema.py",
    "apexdevkit/fastapi/dependable.py",
]

[tool.ruff]
line-length = 88

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "venv",
]

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = [
    "apexdevkit",
    "tests",
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true
