[project]
name = "apexdevkit"
version = "1.26.2"
description = "Apex Development Tools for python."
readme = "README.md"
authors = [
    { name = "Apex Dev", email = "dev@apex.ge" }
]
dynamic = ["dependencies"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
httpx = "*"
fastapi = "*"
uvicorn = "*"
sentry-sdk = { extras = ["fastapi"], version = "*" }
python-dotenv = "*"
pymssql = "2.3.2"

[tool.poetry.scripts]
pycodex = "pycodex.cli:cli"

[tool.poetry.group.dev.dependencies]
approvaltests = "17.3.0"  # pinned because later version has a bug.
pytest = "*"
pytest-approvaltests = "*"
pytest-cov = "*"
pytest-recording = "*"
coverage = "*"
faker = "*"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = [
    "apexdevkit/fastapi/schema.py",
    "apexdevkit/fastapi/dependable.py",
]
show_error_codes = true
pretty = true

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C4",
    "PT",
    "RSE",
    "RET",
    "SIM",
    "T20",
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"apexdevkit/fastapi/resource.py" = ["N803"]
"apexdevkit/fastapi/dependable.py" = ["N806"]


[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = [
    "apexdevkit",
    "tests",
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true
